--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
 - Contacto: contact.md
 - Acerca de: about.md
 - Página principal: principal.md
+- Lista de incidencias: lista.md
 
 plugins:
     - search
