--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,9 @@ repo_url: "https://github.com/gss-mtig/proy2Q"
 
 nav:
 - Home: index.md
+- Levantamiento de requerimientos: requerimientos.md
+- Requerimientos App: requerimientos_app.md
+- Casos de uso: casos_uso.md
 - Estructura del proyecto: estructura.md
 - Contacto: contact.md
 - Acerca de: about.md
@@ -26,9 +29,10 @@ nav:
 - Formulario: formulario.md
 - Menú: menu.md
 - Mapa: mapa.md
-- TODO Mapa: todo.md
-- TODO Lista: todoLista.md
-- Servidor: hosting.md
+- Controles y capas mapa: mapa_capas.md
+- Lista Incidencias: lista_incidencias.md
+- Servidor: servidor.md
+- Mapa incidencias: mapa_incidencias.md
 
 plugins:
     - search
